--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    
+    <header id = "navheader" class = "text-brown">
+        {{#if loggedIn}}
+        <a href="/">Home</a>
+        <a href="/dashboard">Dashboard</a>
+        <a href="/api/users/logout">Logout</a>
+        {{else}}
+        <a href="/">Home</a>
+        <a href ="/dashboard">Dashboard</a>
+        <a href="/login">Login</a>
+        {{/if}}
+    </header>
+    <main>
+        {{{body}}}
+    </main>
 </body>
 </html>
