--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,27 +1,35 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-    <header id = "navheader" class = "text-brown">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
+    <header
+      id="navheader"
+      class="navbar navbar-expand-lg navbar-light bg-light"
+    >
+      <div class="container">
         {{#if loggedIn}}
-        <a href="/">Home</a>
-        <a href="/dashboard">Dashboard</a>
-        <a href="/api/users/logout">Logout</a>
+          <a class="navbar-brand" href="/">Home</a>
+          <a href="/dashboard">Dashboard</a>
+          <a href="/api/users/logout">Logout</a>
         {{else}}
-        <a href="/">Home</a>
-        <a href ="/dashboard">Dashboard</a>
-        <a href="/login">Login</a>
+          <a class="navbar-brand" href="/">Home</a>
+          <a class="navbar-brand" href="/login">Login</a>
         {{/if}}
+      </div>
     </header>
     <main>
-        {{{body}}}
+      {{{body}}}
     </main>
-</body>
+  </body>
 </html>
