--- a/views/allPost.handlebars
+++ b/views/allPost.handlebars
@@ -1,5 +1,5 @@
 <div>
-  {{#each blogData}}
+  {{#each postData}}
     <p>id: {{id}}</p>
     <p>User: {{User.username}}</p>
     <p>Title: {{title}}</p>
