--- a/views/allPost.handlebars
+++ b/views/allPost.handlebars
@@ -1,8 +1,10 @@
-<div>
+<div class = "card">
+  <div class = "card-header">
   {{#each postData}}
     <p>id: {{id}}</p>
     <p>User: {{User.username}}</p>
     <p>Title: {{title}}</p>
-    <p>Content: {{content}}</p>
+    </div>
+    <p class - "card-body"> Content: {{content}}</p>
   {{/each}}
 </div>
