--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,11 @@ body {
     line-height: 1.5;
     font-size: 24px;
 }
+
+main {
+    margin: 20px auto;
+    width: 94%;
+}
 /* CARDS */
                   
 .card {
