--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,23 +13,27 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <header
-      id="navheader"
-      class="navbar navbar-expand-lg navbar-light bg-light"
-    >
-      <div class="container">
-        {{#if loggedIn}}
-          <a class="navbar-brand" href="/">Home</a>
-          <a href="/dashboard">Dashboard</a>
-          <a href="/api/users/logout">Logout</a>
-        {{else}}
-          <a class="navbar-brand" href="/">Home</a>
-          <a class="navbar-brand" href="/login">Login</a>
-        {{/if}}
-      </div>
-    </header>
+    <nav class"nav">
+                    <a class="link" href="/">Home</a>
+                    <a class="link" href="/dashboard">Dashboard</a>
+                    {{#if loggedIn}}
+                    <a class="link" href="/" id="logout">Logout</a>
+                    {{else}}
+                    <a class="link" href="/login">Login</a>
+                    {{/if}}
+                </nav>          
+          </div>
+
+          <h1 class="app-title"><i class="fab "></i>The Tech Blog</h1>
+      </header>
+
     <main>
-      {{{body}}}
+      {{{ body }}}
     </main>
+  </div>
+
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
   </body>
 </html>
