--- a/public/style.css
+++ b/public/style.css
@@ -57,3 +57,9 @@ h3 {
      color: var(--dark);
     line-height: 1.25;
 }
+h4 {
+    font-weight: 700;
+    margin: 0;
+    color: var(--light-dark);
+    line-height: 1.25;
+}
