--- a/views/allPost.handlebars
+++ b/views/allPost.handlebars
@@ -1,9 +1,8 @@
 <div class = "card">
   <div class = "card-header">
   {{#each postData}}
-    <p>id: {{id}}</p>
-    <p>User: {{User.username}}</p>
-    <p>Title: {{title}}</p>
+    <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
+    <p>by User: {{User.username}}</p>
     </div>
     <p class - "card-body"> Content: {{content}}</p>
   {{/each}}
